clean up, import fixes, replaced some deprecated methods